--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.0",
+    "@tinymce/tinymce-angular": "^9.1.0",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
     "ngx-filesaver": "^20.0.0",
+    "ngx-quill": "^28.0.1",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
+    "tinymce": "^8.1.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
