--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.0",
     "@tinymce/tinymce-angular": "^9.1.0",
+    "chart.js": "^4.5.0",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
@@ -47,6 +48,7 @@
     "@angular/build": "^20.1.0",
     "@angular/cli": "^20.1.0",
     "@angular/compiler-cli": "^20.1.0",
+    "@types/chart.js": "^2.9.41",
     "@types/express": "^5.0.1",
     "@types/file-saver": "^2.0.7",
     "@types/html2canvas": "^0.5.35",
