--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/ssr": "^20.1.0",
     "@tinymce/tinymce-angular": "^9.1.0",
     "chart.js": "^4.5.0",
+    "emailjs-com": "^3.2.0",
     "express": "^5.1.0",
     "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
